--- a/攻坚克难.md
+++ b/攻坚克难.md
@@ -48,9 +48,14 @@
 #### Java并发、多线程、线程模型
 #### Java保证线程安全有哪些方法
 #### volatile和synchromized各有什么作用；类锁、方法锁、重入锁
-* a.保证了不同线程对这个变量进行操作时的可见性，即一个线程修改一个变量的值，该新值对其他线程来说是立即可见的
-* b.禁止进行指令重排序
+* a.保证了不同线程对这个变量进行操作时的可见性，即一个线程修改一个变量的值，该新值对其他线程来说是立即可见的;禁止进行指令重排序
+* b.volatile本质是在告诉jvm当前变量在寄存器（工作内存）中的值是不确定的，需要从主存中读取；synchronized则是锁定当前变量，只有当前线程可以访问该变量，其他线程被阻塞住
+* c.volatile仅能使用在变量级别；synchronized则可以使用变量、方法、和类级别的
+* d.volatile仅实现变量修改的可见性，并不能保证原子性；syncronized则可以保证变量的修改可见性和原子性
+* e.volatile不会造成线程的阻塞；synchronized可能会造成线程的阻塞
+* f.volatile标记的变量不会被编译器优化；synchronized标记的变量可以被编译器优化
 #### final finalize关键字的用法
+#### String、StringBulder、StringBuff三者对比
 #### 下拉刷新和加载更多的原理
 #### ScrollView与ListView滑动冲突
 #### RxJava的优点，map\flatmap等关键字的使用
