--- a/攻坚克难.md
+++ b/攻坚克难.md
@@ -56,6 +56,13 @@
 * f.volatile标记的变量不会被编译器优化；synchronized标记的变量可以被编译器优化
 #### final finalize关键字的用法
 #### String、StringBulder、StringBuff三者对比
+#### 接口与回调；回调的原理；下一个回调的Demo
+#### 对泛型的了解、泛型的原理
+#### 接口与抽象类的区别；应用场景；抽象类是否可以没有方法和属性
+#### 静态属性和静态方法是否可以被继承？是否可以被重写？
+#### Java异常体系
+#### 常见排序算法；时空复杂段以及稳定性
+#### 堆和栈内存中的区别是什么(数据结构以及实际实践方面)
 #### 下拉刷新和加载更多的原理
 #### ScrollView与ListView滑动冲突
 #### RxJava的优点，map\flatmap等关键字的使用
@@ -72,12 +79,17 @@
 #### 图片加载Picasso\glie第三方库使用原理及对比
 #### 设计监测内存泄漏的框架
 #### 常用设计模式，如单例模式（线程安全）
+* 创建型模式(5)：工厂方法模式、抽象工程模式、单例模式、建造者模式、原型模式
+* 结构型模式(7)：适配器模式、装饰器模式、代理模式、外观模式、桥接模式、组合模式、享元模式
+* 行为型模式(11)：策略模式、模板方法模式、观察者模式、迭代子模式、责任链模式、命令模式、被网络模式、状态模式、访问者模式、中介者模式、解释器模式
 #### App的启动过程
 #### 性能优化总结{官方part1-part6}
 #### LeadkCannary监测内存泄漏原理
 #### DDMS和TraceView使用与区别
 #### View的绘制原理
 #### Oom避免方法总结
+#### 死锁的四个必要条件
+#### MVC\MVP\MVVM,常见设计模式,写出观察者模式的代码
 #### Serializable和Parcelable的区别
 #### 消息传递机制与多线程
 #### EventBus与RxBus
