--- a/攻坚克难.md
+++ b/攻坚克难.md
@@ -71,6 +71,7 @@
 ### Part2
 #### 内部类与匿名内部类
 #### Http、Https、SSL、TCP握手协议
+#### TCP的3次握手和四次回收；TCP和UDP的区别
 #### Tryl里面有了return还会执行finally
 #### 如何确认信号没有传到服务器会发生什么，为何不是两次握手
 #### 开发过程中遇到的内存泄漏和内存溢出以及解决方案
@@ -97,10 +98,12 @@
 #### 设计模式六大原则
 #### MVC&MVP&MVVM
 #### java反射机制、垃圾回收机制
+#### 开发过程中使用的的框架、自定义控件
 
 ### Part3
 #### Synchronized、Monitor机制
 #### Nio原理
+#### 响应式程序设计（RxAndroid & 50个顶级资源）
 #### GC算法有哪些,各算法优缺点以及应用场景；GC收集器有哪些；内存回收机制与GC算法；GC原理时机以及GC对象；内存泄漏场景及解决方法
 #### Class加载的各阶段过程；ClassLoader有哪些模型
 #### 多线程：实现一个定时调度和循环调度；实现一个ThreadLocal
@@ -117,11 +120,12 @@
 ### 参考
 #### 张拭心博客
 #### 掘金 & 开发者头条
-#### DiyCode
+#### DiyCode社区&
 #### 老罗博客【源码解析】
 #### A开发技术周报
 #### 干货集中营
 #### Cat书签网
 #### 泡在晚上的日子
 #### CodeKK & Train.cn
+#### CSDN博客 ：http://blog.csdn.net/xiaanming/article/details/8703708
 
