--- a/攻坚克难.md
+++ b/攻坚克难.md
@@ -103,6 +103,7 @@
 ### Part3
 #### Synchronized、Monitor机制
 #### Nio原理
+#### 依赖注入&控制反转；Dagger2的使用及原理
 #### 响应式程序设计（RxAndroid & 50个顶级资源）
 #### GC算法有哪些,各算法优缺点以及应用场景；GC收集器有哪些；内存回收机制与GC算法；GC原理时机以及GC对象；内存泄漏场景及解决方法
 #### Class加载的各阶段过程；ClassLoader有哪些模型
@@ -121,6 +122,7 @@
 #### 张拭心博客
 #### 掘金 & 开发者头条
 #### DiyCode社区&
+#### PDF书籍《开发艺术探索》、《第二行代码》、《源码以及设计模式》
 #### 老罗博客【源码解析】
 #### A开发技术周报
 #### 干货集中营
