--- a/攻坚克难.md
+++ b/攻坚克难.md
@@ -72,7 +72,7 @@
 #### 内部类与匿名内部类
 #### Http、Https、SSL、TCP握手协议
 #### TCP的3次握手和四次回收；TCP和UDP的区别
-#### Tryl里面有了return还会执行finally
+#### Try里面有了return还会执行finally
 #### 如何确认信号没有传到服务器会发生什么，为何不是两次握手
 #### 开发过程中遇到的内存泄漏和内存溢出以及解决方案
 #### 换主题以及日间\夜间模式实现
@@ -98,7 +98,13 @@
 #### 设计模式六大原则
 #### MVC&MVP&MVVM
 #### java反射机制、垃圾回收机制
+#### Java动态代理
+#### Java堆栈详解
+* 总述：从抽象的JVM角度看，一般分为：堆（Heap）,栈（Stacks）方法区、运行时常量池、本地方法栈、PC寄存器
+* Head内存的分配也叫动态内存分配；java中运行环境用来分配给对象和JRE类的内存都是堆内存，C\C++有时候可以用malloc或者new来申请分配一个内存，在C\C++可能需要自己负责释放。而Java中则直接依赖GC机制。
+* Stack内存是相对于线程Thread而言的，在执行函数方法时，函数一些内部变量的存储都可以放在栈上创建，函数执行结束的时候这些存储单元会被自动释放。由于它内置在处理器里面所以它分配的运算速度会很快。容量有限。它保存线程中方法中短期存在的常量值和对Head中对象的引用等。
 #### 开发过程中使用的的框架、自定义控件
+* 区别：
 
 ### Part3
 #### Synchronized、Monitor机制
@@ -131,3 +137,33 @@
 #### CodeKK & Train.cn
 #### CSDN博客 ：http://blog.csdn.net/xiaanming/article/details/8703708
 
+####Android Code资源合集
+* GIthub
+* Codekk
+* 干货集中营
+* Google Play开源
+* Ausial
+* AndroidLibs
+* 知乎搜索&Chrom书签
+
+#### 期刊周报
+* Android 开发技术周报（泡网）
+* 周报（infoq）
+* Diycode每日精选（Github）
+* 码农周刊
+* Codekk
+* Train.cn
+* DiyCode
+* 平安科技技术团队
+* Android Cat&掘金&开发者头条
+
+### 基本类库
+#### Fragmentions（解决Fragment的嵌套通讯）
+#### XRexyxleView（下拉刷新、加载更多、AddHeader、AddFooter）
+#### baseAdapter（万能适配器）
+#### Autolayout（鸿洋布局适配）
+#### VLayout（布局）
+#### Ali开源的几个、DiyCodex各个开源的站点
+#### 网请求Retrofit+OkHttp+RxJava
+#### 按功能\按模块\按类型分包
+#### 屏幕适配（AutoLayout鸿洋）
