--- a/攻坚克难.md
+++ b/攻坚克难.md
@@ -65,6 +65,7 @@
 #### 堆和栈内存中的区别是什么(数据结构以及实际实践方面)
 #### 下拉刷新和加载更多的原理
 #### ScrollView与ListView滑动冲突
+#### Scroll滑动机制以及Scroller的使用
 #### RxJava的优点，map\flatmap等关键字的使用
 #### lamadata表达式
 
@@ -97,14 +98,16 @@
 #### android事件分发机制
 #### 设计模式六大原则
 #### MVC&MVP&MVVM
-#### java反射机制、垃圾回收机制
+#### Java反射机制、垃圾回收机制
+#### Java序列化与反序列化
 #### Java动态代理
 #### Java堆栈详解
 * 总述：从抽象的JVM角度看，一般分为：堆（Heap）,栈（Stacks）方法区、运行时常量池、本地方法栈、PC寄存器
 * Head内存的分配也叫动态内存分配；java中运行环境用来分配给对象和JRE类的内存都是堆内存，C\C++有时候可以用malloc或者new来申请分配一个内存，在C\C++可能需要自己负责释放。而Java中则直接依赖GC机制。
 * Stack内存是相对于线程Thread而言的，在执行函数方法时，函数一些内部变量的存储都可以放在栈上创建，函数执行结束的时候这些存储单元会被自动释放。由于它内置在处理器里面所以它分配的运算速度会很快。容量有限。它保存线程中方法中短期存在的常量值和对Head中对象的引用等。
 #### 开发过程中使用的的框架、自定义控件
-* 区别：
+* 区别：堆是不连续的内存区域，堆空间比较灵活也比较大；栈是一块连续的内存区域，大小取决于操作系统；堆管理比较麻烦，频繁的new/remove会造成大量的内存碎片，这样就会慢慢导致效率低下；对于栈的话，它先进后出，进出完全不会产生碎片，运行效率高且稳定；我们通常所说的内存泄漏、GC、是针对Heap内存的。
+* 注意：成员变量全部存储在堆中(包括基本数据类型，引用及引用的实体对象)，因为它们属于类，类对象最终还是要被new出来的。局部变量的基本数据类型和引用存储于栈当中，引用的对象实体存储在堆中。因为它们属于方法当中的变量，生命周期会随着方法一起结束。
 
 ### Part3
 #### Synchronized、Monitor机制
