--- a/攻坚克难.md
+++ b/攻坚克难.md
@@ -115,6 +115,7 @@
 #### 依赖注入&控制反转；Dagger2的使用及原理
 #### 响应式程序设计（RxAndroid & 50个顶级资源）
 #### GC算法有哪些,各算法优缺点以及应用场景；GC收集器有哪些；内存回收机制与GC算法；GC原理时机以及GC对象；内存泄漏场景及解决方法
+* GC时机：系统空闲时；系统自身决定，不可预测的时间/调用System.gc()的时候；
 #### Class加载的各阶段过程；ClassLoader有哪些模型
 #### 多线程：实现一个定时调度和循环调度；实现一个ThreadLocal
 * Def:线程池就是事先将多个线程放到一个容器中，当使用的时候就不用new线程而是直接去池中拿线程即可，节省了开辟子线程的时间，提高代码执行效率
